[tool.poetry]
name = "remarkable-ai"
version = "0.1.0"
description = "Remarkable AI processor"
authors = ["Joep Buhre <you@example.com>"]
readme = "README.md"
packages = [{ include = "remarkable_ai", from = "src" }]
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
imap-tools = "^1.10.0"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
openai = "^1.69.0"
pypandoc = "^1.15"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
